# Symbiauth

./: .editorconfig  .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  CURRENT_PROJECT_STRUCTURE.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  LICENSE  Makefile  PR1_WIREUP_TODO.md  PROJECT_OVERVIEW.md  README.md  ROADMAP_ISSUES.md  Security.md  get_socket_path.swift  test_socket_path.swift
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent.yml  cargo-audit.yml  (+5 more)
apps/agent-macos/: Cargo.toml
apps/agent-macos/config/: policy.sample.yaml
apps/agent-macos/fuzz/: Cargo.toml
apps/agent-macos/fuzz/fuzz_targets/: uds_frame.rs
apps/agent-macos/src/: auth.rs  ble_global.rs  ble_scanner.rs  bridge.rs  config.rs  credentials.rs  error.rs  idempotency.rs  launcher.rs  lib.rs  mac_idle.rs  main.rs  origin.rs  pairing.rs  policy.rs  proximity.rs  ratelimit.rs  recovery.rs  rotation_controller.rs  secrets.rs  session.rs  sinks.rs  startup.rs  time.rs  tls_config.rs  totp.rs  trust.rs  vault.rs  webext_host.rs  wrap.rs
apps/agent-macos/src/audit/: mod.rs  record.rs  verifier.rs  writer.rs
apps/agent-macos/tests/: bridge_test.rs  gating_tests.rs
docs/: Architecture-and-Progress.md  BLE_IMPLEMENTATION.md  PRODUCTION_READINESS.md  README.md  SPEC_SYMBIAUTH_CORE_v1.md  STATE_AND_NEXT_STEPS.md  SYSTEM_OVERVIEW.md  architecture.md  auth_flow.md  ble_phase2.md  ble_proximity_channel_integration.md  ble_proximity_integration_complete.md  ble_proximity_integration_plan.md  ble_tasks.md  clarifying_questions.md  concurrency.md  current_codebase.md  current_technology.md  error_handling.md  handover.md  key_management.md  message_schema.md  north-star.md  policy_schema.yaml  progress_2025-12-30.md  proximity_ble_plan.md  proximity_modes.md  proximity_rules.md  state_recovery.md  supply_chain.md  system_overview_2025-12-30.md  threat_model.md  tls_rotation.md  webext-implementation.md
scripts/: dev_cert_fingerprint.sh  ping_agent.py  run_dev.sh  smoke-test.sh
(+119 files in other folders)
