[package]
name = "agent-macos"
version = "0.1.0"
edition = "2021"
authors = ["Armadillo Team"]
description = "Armadillo macOS agent - core business logic"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","json"] }
qrcode = "0.14"
image = "0.24"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
hkdf = "0.12"
p256 = { version = "0.13", features = ["ecdh"] }
bip39 = { version = "2", default-features = false, features = ["rand"] }
url = "2"
regex = "1"
rusqlite = "0.31"
serde_yaml = "0.9"
generic-array = "0.14"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
users = "0.11"
idna = "0.5"
dirs = "5.0"
hmac = "0.12"
sha1 = "0.10"
data-encoding = "2"
security-framework = { version = "2", optional = true }
nix = { version = "0.27", features = ["signal", "process"] }
btleplug = "0.11"
futures = "0.3"
once_cell = "1.19"
hostname = "0.4"
urlencoding = "2"

[features]
default = ["mac-keychain"]
mac-keychain = ["security-framework"]

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[lib]
name = "agent_macos"
path = "src/lib.rs"

[[bin]]
name = "agent-macos"
path = "src/main.rs"

[[bin]]
name = "test-rotation"
path = "src/bin/test-rotation.rs"

[[bin]]
name = "agent-cli"
path = "src/bin/agent-cli.rs"
