[package]
name = "agent-macos-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
agent-macos = { path = ".." }
serde_json = "1"

[[bin]]
name = "uds_frame"
path = "fuzz_targets/uds_frame.rs"
test = false
doc = false

[workspace]
members = ["."]

[profile.release]
debug = 1
